# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-vllm-rs-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Dynamo Rust backend for vLLM engine-core integration."
# Not published to crates.io: depends on vLLM engine-core crates that are only
# available as git dependencies (see the `vllm` feature below). `cargo publish`
# rejects git dependencies, and nothing in the workspace links this binary as a
# library, so it is excluded from the published Dynamo crate set.
publish = false

[features]
# The vLLM engine-core crates are not yet published to crates.io; they are
# pulled as git dependencies and gated behind this opt-in feature so the
# default workspace build does not require the git sources. Build/run the
# backend with `--features vllm_rs`. Without the feature the binary compiles to
# a stub that exits with an explanatory message.
default = []
vllm_rs = [
    "dep:vllm-engine-core-client",
    "dep:vllm-llm",
    "dep:vllm-managed-engine",
    "dep:vllm-metrics",
]

[[bin]]
name = "dynamo-vllm-rs-backend"
path = "src/main.rs"

[dependencies]
dynamo-backend-common = { workspace = true }
dynamo-runtime = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
vllm-engine-core-client = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.25.1", optional = true }
vllm-llm = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.25.1", optional = true }
vllm-managed-engine = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.25.1", optional = true }
vllm-metrics = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.25.1", optional = true }

[dev-dependencies]
dynamo-backend-common = { workspace = true, features = ["testing"] }
