# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-ext-proc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Envoy ext_proc gRPC server for Dynamo inference routing"

[[bin]]
name = "dynamo-ext-proc"
path = "src/main.rs"

[dependencies]
dynamo-kv-router = { workspace = true, features = ["metrics", "runtime-protocols"] }
dynamo-runtime = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true, features = ["tokio", "http2", "server-auto"] }
k8s-openapi = { workspace = true }
kube = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
# `net` for TcpListenerStream (serve_with_incoming), `sync` for ReceiverStream.
# Declared explicitly rather than relying on workspace feature unification.
tokio-stream = { workspace = true, features = ["net", "sync"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dynamo-llm = { path = "../../../lib/llm" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
dynamo-llm = { path = "../../../lib/llm", default-features = false }
