# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
# empty workspace to exclude from top level workspace
# excluded due to pyo3 extension module build issues

[package]
name = "dynamo-py3"
version = "1.3.0"
edition = "2024"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"

[lib]
path = "rust/lib.rs"
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is necessary to support doctests.
crate-type = ["cdylib", "rlib"]

[features]
default = []
media-ffmpeg = ["dynamo-llm/media-ffmpeg"]
kv-indexer = ["dep:clap", "dep:tracing-subscriber", "dynamo-kv-router/standalone-indexer"]
kv-indexer-metrics = ["kv-indexer", "dynamo-kv-router/metrics"]
slot-tracker = ["dep:clap", "dep:tracing-subscriber", "dynamo-kv-router/standalone-slot-tracker"]
select-service = ["dep:clap", "dep:tracing-subscriber", "dynamo-kv-router/standalone-selection"]
mocker-kvbm-offload = ["dynamo-mocker/kvbm-offload"]
aic-forward-pass = ["dynamo-mocker/aic-forward-pass", "dep:aiconfigurator-core"]
nvtx = ["dynamo-runtime/nvtx"]
# Enable in-process MM-aware KV routing
# (per-image token-count + placeholder expansion + block-level mm_hash).
# Opt-in at the wheel build (`maturin build --features mm-routing`)
# to keep the default wheel lean. Production containers and the MM
# recipes pass this flag explicitly; the dev container's
# `.devcontainer/post-create.sh` also enables it for local workflows.
mm-routing = ["dynamo-llm/mm-routing"]

[dependencies]
# AIC perf model: pure-Rust hot-path latency engine. Pinned to aiconfigurator
# main ToT (PRs #1200 Rust core + #1201 KV-cache API). `extension-module` is
# NOT enabled on aiconfigurator-core (its `default = []`), so this extension's
# own interpreter is used; build_aic_engine() crosses into Python once at
# startup while AicEngine::{prefill,decode}_latency_ms() are pure Rust (no GIL)
# on the predict hot path.
aiconfigurator-core = { git = "https://github.com/ai-dynamo/aiconfigurator.git", rev = "ffbab15797d3a3f14c382e937c0ab0c1c5cbc530", package = "aiconfigurator-core", optional = true }
dynamo-runtime = { path = "../../runtime" }
dynamo-mocker = { path = "../../mocker" }
dynamo-parsers = { version = "2.1.2" }
dynamo-backend-common = { path = "../../backend-common" }

anyhow = { version = "1" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
dashmap = { version = "6.1" }
futures = { version = "0.3" }
rmp = { version = "0.8" }
once_cell = { version = "1.20.3" }
parking_lot = { version = "0.12.4" }
serde = { version = "1" }
serde_json = { version = "1.0.138" }
thiserror = { version = "2.0" }
tokio = { version = "1.46.0", features = ["full"] }
tokio-stream = { version = "0" }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0" }
# Authoritative pins live in the workspace root Cargo.toml. This crate is
# excluded from the workspace (pyo3 build constraint) so we duplicate. Keep
# these two versions in lockstep with the root — drift will show up as
# tracing-opentelemetry bridge mismatches across the FFI boundary.
tracing-opentelemetry = { version = "0.32.0" }
opentelemetry = { version = "0.31.0", features = ["trace"] }
uuid = { version = "1.18.1" }

# kv-indexer / slot-tracker / shared kv-router types
dynamo-kv-router = { path = "../../kv-router" }
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10, which is the minimum version in pyproject.toml
pyo3 = { version = "0.23.4", default-features = false, features = [
  "macros",
  "experimental-async",
  "experimental-inspect",
  "extension-module",
  "py-clone",
  "abi3-py310"
] }

pyo3-async-runtimes = { version = "0.23.0", default-features = false, features = [
  "attributes",
  "testing",
  "tokio-runtime",
  "unstable-streams",
] }

pythonize = "0.23"


[target.'cfg(target_os = "linux")'.dependencies]
dynamo-llm = { path = "../../llm" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
dynamo-llm = { path = "../../llm", default-features = false }

[dev-dependencies]

[profile.profiling]
inherits = "release"
debug = true
strip = false

# Mirror of root Cargo.toml's patch: sub-workspaces don't inherit
# [patch.crates-io] from the root, so re-declare here. Remove once
# llm-multimodal >=1.6.0 is published on crates.io.
[patch.crates-io]
llm-multimodal = { git = "https://github.com/lightseekorg/smg", rev = "e3eccacf96bc6e041a7ec6623e2251dba1129f28" }
llm-tokenizer = { git = "https://github.com/lightseekorg/smg", rev = "e3eccacf96bc6e041a7ec6623e2251dba1129f28" }
