# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "hello_world",
    "service_metrics",
    "system_metrics",
]
resolver = "3"

[workspace.package]
version = "0.6.1"
edition = "2024"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"


[workspace.dependencies]
# local or crates.io
dynamo-runtime = { path = "../" }
prometheus = { version = "0.14" }
