# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "hello_world",
    "service_metrics",
    "system_metrics",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"


[workspace.dependencies]
# local or crates.io
anyhow = "1"
dynamo-runtime = { path = "../" }
prometheus = { version = "0.14" }
