# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-trtllm-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Dynamo TensorRT-LLM sidecar backend — drives an out-of-process TensorRT-LLM engine over its native gRPC service through the backend-common LLMEngine trait."

[package.metadata.cargo-machete]
# Referenced by the protobuf client generated into OUT_DIR at build time.
ignored = ["prost"]

[[bin]]
name = "dynamo-trtllm-sidecar"
path = "src/main.rs"

[dependencies]
dynamo-backend-common = { workspace = true }
dynamo-sidecar-common = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

# tonic / prost are pinned per-crate (not workspace deps): tonic 0.13.1
# depends on prost 0.13.5, matching `lib/llm` and the sglang sidecar.
prost = { version = "0.13.5" }
tonic = { version = "0.13.1" }

[build-dependencies]
tonic-build = { version = "0.13.1" }

[dev-dependencies]
dynamo-backend-common = { workspace = true, features = ["testing"] }
tokio-stream = { workspace = true, features = ["net"] }
